--- a/JiuJiuWeb/src/app/home/home.component.html
+++ b/JiuJiuWeb/src/app/home/home.component.html
@@ -1,3 +1,24 @@
-<p>
-  home works!
-</p>
+<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" [routerLink]="['']">酒酒网</a>
+    </div>
+    <div class="collapse navbar-collapse navbar-ex1-collapse">
+      <ul class="nav navbar-nav pull-right">
+        <li><a [routerLink]="['']">酒库</a></li>
+        <li><a [routerLink]="['/about']">关于我们</a></li>
+        <li><a [routerLink]="['/login']">登录</a></li>
+        <li><a [routerLink]="['/signup']">注册</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<div>
+  <router-outlet></router-outlet>
+</div>
+
