--- a/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
+++ b/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
@@ -1,9 +1,9 @@
-<div class="row">
-  <img src="../assets/banner.jpg">
+<div class="row"  >
+  <img src="../assets/images/AboutUs.jpg" class="img-responsive center-block" style=" margin-top:80px;">
 </div>
 <div class="contact-wrap">
   <div>
-    <img src="../assets/vision.png">
+    <img src="../assets/images/vision.png">
     <span>网站介绍</span>
   </div>
   <div class="contact-list">
@@ -13,7 +13,7 @@
 
 <div class="contact-wrap">
   <div>
-    <img src="../assets/friends.png">
+    <img src="../assets/images/friends.png">
     <span>团队介绍</span>
   </div>
   <div class="contact-list">
@@ -23,12 +23,12 @@
 
 <div class="contact-wrap">
   <div>
-    <img src="../assets/contact.png">
+    <img src="../assets/images/contact.png">
     <span>联系我们</span>
   </div>
   <div class="contact-list">
-    <p class="inline-p">邮箱:  bd@pai9.com.cn(商务)</p>
-    <span>400-770-7880(客服)</span>
-    <p>地址: 天津大学软件学院</p>
+    <p class="inline-p">邮箱: JiuJiuWeb@163.com(商务)</p>
+    <p>400-888-8888(客服)</p>
+    <p>地址: 天津大学北洋园校区软件学院</p>
   </div>
 </div>
