--- a/JiuJiuWeb/src/app/HomePage/login/login.component.html
+++ b/JiuJiuWeb/src/app/HomePage/login/login.component.html
@@ -1,14 +1,13 @@
 <div class="login-page" >
   <div class="row justify-content-md-center">
-    <div class="col-md-4">
-      <img src="assets/images/logo.png" width="150px" class="user-avatar" />
+    <div class="col-md-4 col-md-offset-4 " style=" margin-top:50px;">
+      <img src="assets/images/logo.jpg" width="150px" class="user-avatar" />
       <h1>酒酒网</h1>
       <form role="form">
         <div class="form-content">
           <div class="form-group">
             <input type="text" ng-model="name" class="form-control input-underline input-lg" id="" placeholder="Email">
           </div>
-
           <div class="form-group">
             <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
           </div>
