--- a/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
+++ b/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div class="login-page center-block" >
 <div class="row justify-content-md-center">
-  <div class="col-md-4">
-    <img class="user-avatar" src="assets/images/logo.png" width="150px" />
+  <div class="col-md-4 col-md-offset-4 " style=" margin-top:50px;">
+    <img class="user-avatar" src="assets/images/logo.jpg" width="150px" />
     <h1>酒酒网</h1>
     <form role="form">
       <div class="form-content">
