--- a/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
+++ b/JiuJiuWeb/src/app/HomePage/aboutus/aboutus.component.html
@@ -1,5 +1,5 @@
 <div class="row"  >
-  <img src="../assets/images/AboutUs.jpg" class="img-responsive center-block" style=" margin-top:80px;">
+  <img src="../assets/images/AboutUs.jpg" class="img-responsive">
 </div>
 <div class="contact-wrap">
   <div>
