新增加用户管理界面

--- a/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
@@ -1,3 +1,8 @@
-<div class="row carousel-container">
+<!--<div class="row carousel-container">
   <app-carousel></app-carousel>
+</div> -->
+
+<div>
+  <app-banner-head></app-banner-head>
+  <app-product></app-product>
 </div>
