--- a/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
+++ b/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
@@ -20,7 +20,7 @@
           <input type="password" class="form-control input-underline input-lg" id="" placeholder="Repeat Password">
         </div>
       </div>
-      <a class="btn rounded-btn" [routerLink]="['/user']"> Register </a>&nbsp;
+      <a class="btn rounded-btn" [routerLink]="['/usercenter']"> Register </a>&nbsp;
       <a class="btn rounded-btn" [routerLink]="['/login']" > Log in </a>
     </form>
   </div>
