--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -1,7 +1,14 @@
 <nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
   <ul class="list-group">
-    <a routerLink="/dashboard"  class="list-group-item">
+    <a   class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard'}}
     </a>
+    <a [routerlink]="['/typeTree']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒图'}}
+    </a>
+
+
+
+
   </ul>
 </nav>
