--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <a   class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ 'Dashboard'}}
     </a>
-    <a [routerlink]="['/typeTree']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+    <a [routerLink]="['/typeTree']" [routerLinkActive]="['router-link-active']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒图'}}
     </a>
 
