--- a/JiuJiuWeb/src/app/UserWebsite/user/product/product.component.css
+++ b/JiuJiuWeb/src/app/UserWebsite/user/product/product.component.css
@@ -383,8 +383,8 @@ body {
   right: 24px;
 }
 .program-item .text {
-  float: left;
-  font-size: 13px;
+  float: right;
+  font-size: 20px;
   color: #93999f;
   line-height: 24px;
 }
