--- a/JiuJiuWeb/src/app/UserWebsite/user/product/product.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/product/product.component.html
@@ -9,7 +9,7 @@
         <p>口感：{{item.taste}}</p>
         <p>酸度：{{item.sour}}</p>
         <p>甜度：{{item.sweetness}}</p>
-        <p>类型：{{item.type}}</p>
+        <p>类型：{{item.ty}}</p>
         <p>度数：{{item.degree}}</p>
         <p>香型：{{item.flavor}}</p>
         <p>生产地点：{{item.proplace}}</p>
@@ -21,7 +21,9 @@
         <p>抽检结果：{{item.result}}</p>
         <p>不合格原因：{{item.reason}}</p>
       </div>
-
+      <div class='program-list-bot'>
+        <span class='text'>评论</span>
+      </div>
     </div>
   </div>
   <div class='c-line'></div>
