--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -1,3 +1,10 @@
 <div>
+  <form id="upfile" name="upform" enctype="multipart/form-data" method="post" action="">
+    <label for="upfile">上传文件：</label>
+    <input type="file" name="upfile" id="fileField" />
+    <input type="text" name="username" />
+    <input type="password" name="password" />
+    <input type="submit" name="submit" value="上传"/>
 
+  </form>
 </div>
