--- a/JiuJiuWeb/src/app/UserWebsite/user/product/product.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/product/product.component.html
@@ -1,4 +1,4 @@
-<a *ngFor="let item of products; let i=index;" target="_blank" class='program-item' style="margin-left: 50px;margin-top:100px ">
+<a *ngFor="let item of products let i=index;" href='javascript:void(0)' class='program-item' style="margin-left: 50px;margin-top:100px ">
   <div class='shadow'>
     <div class='program-list-head'>
       <div id='repo-bg-{{item.img}}'></div>
