--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -1,4 +1,4 @@
-<div style>
+<div>
   <form id="upfile" name="upform" enctype="multipart/form-data" method="post" action="">
     <label for="upfile">上传文件：</label>
     <input type="file" name="upfile" id="fileField" />
