--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -1,12 +1,11 @@
-<nav class="sidebar" [ngClass]="{sidebarPushRight: isActive}">
-  <ul class="list-group">
+<div>
+<nav class="sidebar" >
+  <ul class="list-group" >
 
     <a [routerLink]="['/typeTree']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒图'}}
     </a>
 
-
-
-
   </ul>
 </nav>
+</div>
