--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -1,9 +1,17 @@
 <div>
 <nav class="sidebar" >
   <ul class="list-group" >
-
     <a [routerLink]="['/typeTree']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒图'}}
+    </a>
+    <a [routerLink]="['']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒库'}}
+    </a>
+    <a [routerLink]="['']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒友'}}
+    </a>
+    <a [routerLink]="['']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '其他'}}
     </a>
 
   </ul>
