--- a/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
+++ b/JiuJiuWeb/src/app/HomePage/signup/signup.component.html
@@ -21,7 +21,8 @@
         </div>
       </div>
       <a class="btn rounded-btn" [routerLink]="['/usercenter']"> Register </a>&nbsp;
-      <a class="btn rounded-btn" [routerLink]="['/login']" > Log in </a>
+      <a class="btn rounded-btn" [routerLink]="['/admin']" > Log in </a>
     </form>
   </div>
+</div>
 </div>
