--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -1,43 +1,3 @@
-<html>
-<head>
-<script language="javascript">
-  function showDay(){
-    var y = document.getElementById("year").value;
-    var m = document.getElementById("month").value;
-    switch(m){
-      case "1":
-      case "3":
-      case "5":
-      case "7":
-      case "8":
-      case "10":
-      case "12":
-        day = 31;
-        break;
-      case "4":
-      case "6":
-      case "9":
-      case "11":
-        day = 30;
-        break;
-      case "2":
-        if(y%4==0&&y0!=0||y%400==0){
-          day = 29;
-        } else {
-          day = 28;
-        }
-    }
-    str = "<select>";
-    for(a=1;a<=day;a++){
-      str += "<option>"+a+"</option>";
-    }
-    str += "</select>";
-    document.getElementById("d").innerHTML = str;
-
-  }
-</script>
-</head>
-
 <div>
   <link rel="stylesheet" href="../assets/base.css" type="text/css" />
   <link rel="stylesheet" href="../assets/common-less(1).css" type="text/css" />
@@ -105,37 +65,13 @@
                 </div>
 
                 <div class="wlfg-wrap clearfix">
-                  <label class="label-name" for="nick">出生年月：</label>
-                  <div class="rlf-group" onload="showDay()">
-                    <select id="year" onchange="showDay()">
-                      <script language="javascript">
-                        //获得当前系统时间;
-                        var now = new Date();
-                        var year = now.getFullYear();
-
-                        //用一个方法循环输出年份;
-                        for (i = year - 100; i <= year; i++) {
-                          if (i == year - 20) {
-                            document.write("<option selected value=" + i + ">" + i + "</option>");
-                          } else {
-                            document.write("<option value=" + i + ">" + i + "</option>");
-                          }
-                        }
-                      </script>
-                    </select>
-                    <select id="month" onchange="showDay()">
-                      <script language="javascript">
-                        var now = new Date();
-                        var month = now.getMonth();
-                        for (j = 1; j <= 12; j++) {
-                          document.write("<option value=" + j + ">" + j + "</option>");
-                        }
-                      </script>
-                    </select>
-                    <span id="d"></span>
-
-                    <p class="rlf-tip-wrap errorHint color-red"></p>
+                  <label class="label-name" for="birthday" >出生日期：</label>
+                  <div class="rlf-group">
+                    <input type="date" name="birthday" id="birthday"  autocomplete="off"  data-validate="require-nick"  class="moco-form-control">
+                    <p class="rlf-tip-wrap errorHint color-red" ></p>
                   </div>
+                </div>
+
 
                   <label class="label-name" for="province-select">城市：</label>
                   <div class="rlf-group profile-address">
