--- a/JiuJiuWeb/src/app/AdminWebsite/admin/type-tree/type-tree.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/type-tree/type-tree.component.html
@@ -3,7 +3,6 @@
 <meta charset="utf-8">
 <script src="http://d3js.org/d3.v2.js"></script>
 <script src="http://underscorejs.org/underscore.js"></script>
-<script src="burrow.js"></script>
 
 <style>
   .node circle {
@@ -25,6 +24,10 @@
   }
 </style>
 <body>
+<p>
+
+  typetree page works!
+</p>
 </body>
 <script>
   /* Reingold-Tilford Tree */
