--- a/JiuJiuWeb/src/app/HomePage/login/login.component.html
+++ b/JiuJiuWeb/src/app/HomePage/login/login.component.html
@@ -12,7 +12,7 @@
             <input type="password" class="form-control input-underline input-lg" id="" placeholder="Password">
           </div>
         </div>
-        <a class="btn rounded-btn" routerLink='/user' (click)="onLoggedin()" > Log in </a>
+        <a class="btn rounded-btn" routerLink='/admin' (click)="onLoggedin()" > Log in </a>
 
         <a class="btn rounded-btn" [routerLink]="['/signup']" >Register</a>
       </form>
