--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -72,7 +72,7 @@
                   </div>
                 </div>
 
-
+                <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="province-select">城市：</label>
                   <div class="rlf-group profile-address">
                     <select id="province-select" class='moco-form-control' hidefocus="true">
@@ -122,7 +122,9 @@
                     <div class="cb"></div>
                     <p class="rlf-tip-wrap errorHint color-red"></p>
                   </div>
+                </div>
 
+                <div class="wlfg-wrap clearfix">
                   <label class="label-name h16 lh16">性别：</label>
                   <div class="rlf-group rlf-radio-group">
                     <label class="lh16"><input type="radio" hidefocus="true" value="0" name="sex">保密</label>
@@ -131,7 +133,8 @@
                                                name="sex">女</label>
                     <p class="rlf-tip-wrap errorHint color-red"></p>
                   </div>
-                
+                </div>
+
 
                 <div class="wlfg-wrap clearfix">
                   <label class="label-name" for="aboutme">个性签名：</label>
