--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -1,16 +1,19 @@
 <div>
 <nav class="sidebar " >
   <ul class="list-group" >
-    <a [routerLink]="['/typeTree']" class="list-group-item">
+    <a [routerLink]="['./']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '主页'}}
+    </a>
+    <a [routerLink]="['./typeTree']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒图'}}
     </a>
-    <a [routerLink]="['/grapery']" class="list-group-item">
+    <a [routerLink]="['./grapery']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒库'}}
     </a>
-    <a [routerLink]="['']" class="list-group-item">
+    <a [routerLink]="['./']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒友'}}
     </a>
-    <a [routerLink]="['']" class="list-group-item">
+    <a [routerLink]="['./']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '其他'}}
     </a>
   </ul>
