--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.scss
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.scss
@@ -5,7 +5,7 @@ $topnav-background-color: #222;
   z-index: 1000;
   top: 56px;
   left: 235px;
-  width: 150px;
+  width: 15%;
   margin-top:-7px;
   margin-left: -235px;
   border: none;
@@ -30,7 +30,7 @@ a.list-group-item {
   text-decoration: none;
   font-size: 15px; //字体大小
 .fa {
-  margin-right: 35px; //文字位置
+  margin-right: 50px; //文字位置
 }
 }
 a:hover {
