--- a/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/usercenter/usercenter.component.html
@@ -73,7 +73,7 @@
                 </div>
 
                 <div class="wlfg-wrap clearfix">
-                  <label class="label-name" for="province-select">城市：</label>
+                  <label class="label-name" for="province-select">地区：</label>
                   <div class="rlf-group profile-address">
                     <select id="province-select" class='moco-form-control' hidefocus="true">
                       <option value="0">选择省份</option>
@@ -112,12 +112,6 @@
                       <option value="33">澳门</option>
                       <option value="34">香港</option>
                       <option value="100">其他</option>
-                    </select>
-                    <select class='moco-form-control' id="city-select" hidefocus="true">
-                      <option value="0">选择城市</option>
-                    </select>
-                    <select class='moco-form-control mr0' id="area-select" hidefocus="true">
-                      <option value="0">选择区县</option>
                     </select>
                     <div class="cb"></div>
                     <p class="rlf-tip-wrap errorHint color-red"></p>
