--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav pull-right">
-        <li><a [routerLink]="['']">酒库</a></li>
+        <li><a [routerLink]="['/usercenter']">酒库</a></li>
         <li><a [routerLink]="['/about']">关于我们</a></li>
         <li><a [routerLink]="['/login']">登录</a></li>
         <li><a [routerLink]="['/signup']">注册</a></li>
