--- a/JiuJiuWeb/src/app/AdminWebsite/admin/admin.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/admin.component.html
@@ -1,9 +1,8 @@
 <div class="container">
   <div class="row">
-    <app-sidebar></app-sidebar>
-    <div class="pull-right">
-      <router-outlet></router-outlet>
-    </div>
+    <app-sidebar class="col-lg-2"></app-sidebar>
+
+    <router-outlet></router-outlet>
 
   </div>
 </div>
