--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/admin-right.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/admin-right.component.html
@@ -1,30 +1,56 @@
-<!-- 轮播图 -->
-<div class="row carousel-container col-lg-12 pull-right">
-  <div class="carousel slide " data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li class="active"></li>
-      <li></li>
-      <li></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="item active">
-        <img class="slide-image img-responsive" src="assets/images/lunbo2.jpeg" alt=""/>
+<div >
+  <!-- 轮播图 -->
+
+  <div class="row carousel-container col-lg-12 ">
+    <div class="carousel slide " data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li class="active"></li>
+        <li></li>
+        <li></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="item active">
+          <img class="slide-image img-responsive" src="assets/images/lunbo2.jpeg" alt=""/>
+        </div>
+        <div class="item">
+          <img class="slide-image img-responsive" src="assets/images/lunbo3.jpeg" alt=""/>
+        </div>
+        <div class="item">
+          <img class="slide-image img-responsive" src="assets/images/lunbo1.jpeg" alt=""/>
+        </div>
       </div>
-      <div class="item">
-        <img class="slide-image img-responsive" src="assets/images/lunbo3.jpeg" alt=""/>
-      </div>
-      <div class="item">
-        <img class="slide-image img-responsive" src="assets/images/lunbo1.jpeg" alt=""/>
-      </div>
+      <a class="left carousel-control" href="javascript:$('.carousel').carousel('prev')">
+        <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="right carousel-control" href="javascript:$('.carousel').carousel('next')">
+        <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
     </div>
-    <a class="left carousel-control" href="javascript:$('.carousel').carousel('prev')">
-      <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="right carousel-control" href="javascript:$('.carousel').carousel('next')">
-      <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
   </div>
+
+  <hr>
+  <div>
+  <h2 style="text-align:center" class="text-muted">{{adminName}},
+    <small>欢迎进入管理系统!</small>
+  </h2>
 </div>
-<p>
-  admin-right works!
-</p>
+  <div class="row">
+    <div class="col-xl-3 col-lg-3 ">
+      <app-stat [name]="'酒库'"  [count]="88"  [color]="'primary'"></app-stat>
+    </div>
+    <div class="col-xl-3 col-lg-3">
+      <app-stat [name]="'酒友'"  [count]="66" [color]="'warning'"></app-stat>
+    </div>
+    <div class="col-xl-3 col-lg-3">
+      <app-stat [name]="'评论'" [count]="123" [color]="'success'"></app-stat>
+    </div>
+    <div class="col-xl-3 col-lg-3">
+      <app-stat [name]="'管理员'"  [count]="4" [color]="'danger'"></app-stat>
+    </div>
+  </div>
+  <hr/>
+  <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}
+  </ngb-alert>
+  <hr/>
+
+</div>
