--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/admin-right.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/admin-right/admin-right.component.html
@@ -1,7 +1,7 @@
 <div >
   <!-- 轮播图 -->
 
-  <div class="row carousel-container col-lg-12 ">
+  <div class="row carousel-container  ">
     <div class="carousel slide " data-ride="carousel">
       <ol class="carousel-indicators">
         <li class="active"></li>
