--- a/JiuJiuWeb/src/app/app.component.html
+++ b/JiuJiuWeb/src/app/app.component.html
@@ -11,7 +11,14 @@
     </div>
     <div class="collapse navbar-collapse navbar-ex1-collapse">
       <ul class="nav navbar-nav pull-right">
-        <li><a [routerLink]="['/usercenter']">酒库</a></li>
+        <li><a [routerLink]="['']">首页</a></li>
+        <li><a [routerLink]="['/usercenter']">美食</a></li>
+        <li><a [routerLink]="['/usercenter']">运动</a></li>
+        <li><a [routerLink]="['/usercenter']">图书</a></li>
+        <li><a [routerLink]="['/usercenter']">科研</a></li>
+        <li><a [routerLink]="['/usercenter']">娱乐</a></li>
+        <li><a [routerLink]="['/usercenter']">交友</a></li>
+        <li><a [routerLink]="['/usercenter']">就业</a></li>
         <li><a [routerLink]="['/about']">关于我们</a></li>
         <li><a [routerLink]="['/login']">登录</a></li>
         <li><a [routerLink]="['/signup']">注册</a></li>
