admin+user management

--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -5,16 +5,22 @@
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '主页'}}
     </a>
     <a [routerLink]="['./typeTree']" class="list-group-item">
-      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒图'}}
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '分类图'}}
     </a>
-    <a [routerLink]="['./grapery']" class="list-group-item">
-      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒库'}}
+    <a [routerLink]="['./adminmanagement']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '管理员'}}
+    </a>
+    <a [routerLink]="['./usermanagement']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '用户'}}
     </a>
     <a [routerLink]="['./']" class="list-group-item">
-      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '酒友'}}
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '栏目'}}
     </a>
     <a [routerLink]="['./']" class="list-group-item">
-      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '其他'}}
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '文章'}}
+    </a>
+    <a [routerLink]="['./']" class="list-group-item">
+      <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '友情链接'}}
     </a>
   </ul>
 </nav>
