too many management......

--- a/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/sidebar/sidebar.component.html
@@ -13,10 +13,10 @@
     <a [routerLink]="['./usermanagement']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '用户'}}
     </a>
-    <a [routerLink]="['./']" class="list-group-item">
+    <a [routerLink]="['./categorymanagement']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '栏目'}}
     </a>
-    <a [routerLink]="['./']" class="list-group-item">
+    <a [routerLink]="['./articlemanagement']" class="list-group-item">
       <i class="fa fa-fw fa-dashboard"></i>&nbsp;{{ '文章'}}
     </a>
     <a [routerLink]="['./']" class="list-group-item">
