--- a/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
+++ b/JiuJiuWeb/src/app/UserWebsite/user/user.component.html
@@ -9,7 +9,7 @@
     <div class="xnews">
       <div class="pic">
         <a href="">
-          <img alt="{{item.pic}}" src=" ">
+          <img src="../assets/images/{{item.pic}} ">
         </a>
       </div>
       <div class="dec">
