--- a/JiuJiuWeb/src/app/HomePage/block/block.component.html
+++ b/JiuJiuWeb/src/app/HomePage/block/block.component.html
@@ -1,6 +1,6 @@
-<div *ngFor="let item of projects" class='program-item' style="margin-top: 20px">
+<div *ngFor="let item of cates" class='program-item' style="margin-top: 20px">
     <div class='program-list-head'>
-      <div style="font-size: large;text-align:center;line-height:100px">{{item.title}}</div>
+      <div style="font-size: 40px;text-align:center;line-height:100px">{{item.name}}</div>
     </div>
     <div class='program-list-cont'>
       <div class='program-list-tit'>{{item.desc}}</div>
