--- a/JiuJiuWeb/src/app/HomePage/block/block.component.css
+++ b/JiuJiuWeb/src/app/HomePage/block/block.component.css
@@ -261,12 +261,14 @@ body {
   transition: all linear .3s;
   box-shadow: 0px 4px 8px 0px rgba(7, 17, 27, 0.1);
   overflow: hidden;
+  border-color: #69cbf8;
+  border-width: 0.5px;
 }
 .program-item .program-list-head {
   height: 96px;
   border-top-left-radius: 6px;
   border-top-right-radius: 6px;
-  background-color: #f3f5f7;
+  background-color: #c8cdd2;
   overflow: hidden;
 }
 .program-item .program-list-head div {
@@ -282,6 +284,7 @@ body {
   padding: 0 24px;
   border-bottom-right-radius: 6px;
   border-bottom-left-radius: 6px;
+  background-image: url(blockk.jpg);
 }
 .program-item .program-list-tit {
   width: 100%;
@@ -289,23 +292,18 @@ body {
   color: #07111b;
   font-size: 16px;
   line-height: 28px;
-  max-height: 55px;
   letter-spacing: -0.1px;
   text-overflow: ellipsis;
-  word-break: break-all;
-  word-wrap: break-word;
+  word-break:break-all;
   overflow: hidden;
-  text-overflow: -o-ellipsis-lastline;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
+
+
 }
 .program-item .program-list-dest {
   font-size: 32px;
   line-height: 24px;
   height: 68px;
   max-height: 68px;
-  word-break: normal;
   color: #333;
   text-overflow: ellipsis;
   word-break: break-all;
