--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/articlemanagement/articlemanagement.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/articlemanagement/articlemanagement.component.html
@@ -1,6 +1,7 @@
-
-
 <h2 style="text-align:center" class="text-muted">
   <small>文章管理界面</small>
 </h2>
 <app-article-table></app-article-table>
+<div  style="text-align:center; width:100%;height:100%;margin-top:15px; " >
+<button class="btn btn-info" type="button" style="width: 10%;height: 5%;" [routerLink]="['/admin/addArticle']" >添加</button>
+</div>
