--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.css
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.css
@@ -3,9 +3,8 @@
 }
 
 .setting-profile {
-  width: 490px;
-  margin-left: auto;
-  margin-right: auto;
+  width: 800px;
+  margin-left: -190px;
   background-color: #fff
 }
 
