--- a/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
+++ b/JiuJiuWeb/src/app/AdminWebsite/admin/right/add-article/add-article.component.html
@@ -14,6 +14,9 @@
 
             <div id="setting-profile" class="setting-wrap setting-profile">
 
+              <!--<image-upload [headers]="myHeaders"></image-upload>-->
+
+              <hr>
               <app-ckeditor></app-ckeditor>
 
 
@@ -26,4 +29,3 @@
 
   </div>
 </div>
-
